# webrtc-vad

./: CMakeLists.txt  LICENSE  Makefile  exports.c  exports.h
.github/workflows/: build.yml
